--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,8 @@ jobs:
       id-token: write # for testing the action itself
       contents: read # for private repos
 
+    environment: test
+
     steps:
       - uses: actions/checkout@v5
         with:
