--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,7 @@ env:
 
 jobs:
   test-exchange-only:
+    if: ${{ github.event.pull_request.head.repo.full_name != 'astral-sh/pyx-auth-action' }}
     runs-on: ubuntu-latest
     permissions:
       id-token: write # for testing the action itself
