--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   test-exchange-only:
-    if: ${{ github.event.pull_request.head.repo.full_name != 'astral-sh/pyx-auth-action' }}
+    if: ${{ github.event.pull_request.head.repo.full_name == 'astral-sh/pyx-auth-action' }}
     runs-on: ubuntu-latest
     permissions:
       id-token: write # for testing the action itself
@@ -32,6 +32,7 @@ jobs:
           url: ${{ env.PYX_UPLOAD_URL }}
 
   test-publish-e2e:
+    if: ${{ github.event.pull_request.head.repo.full_name == 'astral-sh/pyx-auth-action' }}
     runs-on: ubuntu-latest
     permissions:
       id-token: write # for testing the action itself
