--- a/action.yml
+++ b/action.yml
@@ -6,14 +6,39 @@ branding:
   color: purple
 
 inputs:
+  workspace:
+    description: |
+      The pyx workspace being published to.
+
+      Example: acme
+    required: false
+  registry:
+    description: |
+      The pyx registry being published to.
+
+      Example: main
+    required: false
   url:
-    description: "Your registry's upload URL"
+    description: |
+      The upload URL.
+
+      Example: https://api.pyx.dev/v1/upload/acme/main
+    required: false
+  api-base:
+    description: |
+      WARNING: NOT PART OF THE PUBLIC API
+
+      The base URL for the pyx API.
     required: true
+    default: "https://api.pyx.dev"
 
 outputs:
   token:
     description: "The temporary upload token"
     value: ${{ steps.exchange.outputs.token }}
+  url:
+    description: "The upload URL"
+    value: ${{ steps.exchange.outputs.url }}
 
 runs:
   using: composite
@@ -27,4 +52,7 @@ runs:
         uv run --script "${GITHUB_ACTION_PATH}/action.py"
       shell: bash
       env:
+        GHA_PYX_INPUT_WORKSPACE: ${{ inputs.workspace }}
+        GHA_PYX_INPUT_REGISTRY: ${{ inputs.registry }}
         GHA_PYX_INPUT_URL: ${{ inputs.url }}
+        GHA_PYX_INPUT_API_BASE: ${{ inputs.api-base }}
