--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ env:
   PYX_UPLOAD_URL: https://astral-sh-staging-api.pyx.dev/v1/upload/test/internal
 
 jobs:
-  test-exchange-only:
+  selftest-exchange-only:
     if: ${{ github.event.pull_request.head.repo.full_name == 'astral-sh/pyx-auth-action' }}
     runs-on: ubuntu-latest
     permissions:
@@ -31,7 +31,28 @@ jobs:
         with:
           url: ${{ env.PYX_UPLOAD_URL }}
 
-  test-publish-e2e:
+  selftest-exchange-only-workspace:
+    if: ${{ github.event.pull_request.head.repo.full_name == 'astral-sh/pyx-auth-action' }}
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write # for testing the action itself
+      contents: read # for private repos
+
+    environment: test
+
+    steps:
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          persist-credentials: false
+
+      - uses: ./
+        id: auth
+        with:
+          workspace: test
+          registry: internal
+          api-base: https://astral-sh-staging-api.pyx.dev
+
+  selftest-publish-e2e:
     if: ${{ github.event.pull_request.head.repo.full_name == 'astral-sh/pyx-auth-action' }}
     runs-on: ubuntu-latest
     permissions:
