--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -224,3 +224,22 @@ jobs:
         env:
           UV_PUBLISH_URL: ${{ steps.auth.outputs.url }}
           UV_PUBLISH_TOKEN: ${{ steps.auth.outputs.token }}
+
+  all-tests-pass:
+    if: always()
+
+    needs:
+      - selftest-exchange-only
+      - selftest-exchange-only-workspace-default-registry
+      - selftest-exchange-only-workspace
+      - selftest-inputs-mutex-xfail
+      - selftest-publish-e2e
+      - selftest-publish-e2e-workspace-default-registry
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Ensure all selftests passed
+        uses: re-actors/alls-green@05ac9388f0aebcb5727afa17fcccfecd6f8ec5fe # v1.2.2
+        with:
+          jobs: ${{ toJSON(needs) }}
