--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,7 @@ permissions: {}
 
 env:
   PYX_UPLOAD_URL: https://astral-sh-staging-api.pyx.dev/v1/upload/pyx-auth-action/main
+  GHA_PYX_INPUT_INTERNAL_API_BASE: https://astral-sh-staging-api.pyx.dev
 
 jobs:
   selftest-exchange-only:
@@ -68,7 +69,6 @@ jobs:
         with:
           workspace: pyx-auth-action
           registry: main
-          api-base: https://astral-sh-staging-api.pyx.dev
 
   selftest-exchange-only-workspace-default-registry:
     if: |-
@@ -92,7 +92,6 @@ jobs:
         id: auth
         with:
           workspace: pyx-auth-action
-          api-base: https://astral-sh-staging-api.pyx.dev
 
   selftest-inputs-mutex-xfail:
     if: |-
@@ -207,7 +206,6 @@ jobs:
         id: auth
         with:
           workspace: pyx-auth-action
-          api-base: https://astral-sh-staging-api.pyx.dev
 
       - name: Checkout sampleproject
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
