--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,39 @@ env:
   GHA_PYX_INPUT_INTERNAL_API_BASE: https://astral-sh-staging-api.pyx.dev
 
 jobs:
-  selftest-exchange-only:
+  selftest-exchange-only-index:
+    if: |-
+      ${{
+          github.event.pull_request.head.repo.full_name == 'astral-sh/pyx-auth-action' ||
+          github.event_name == 'push'
+       }}
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write # for testing the action itself
+      contents: read # for private repos
+
+    environment: test
+
+    steps:
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          persist-credentials: false
+
+      - name: Create a dummy pyproject.toml with publish-url
+        run: |
+          cat <<EOF >> pyproject.toml
+
+          [[tool.uv.index]]
+          name = "pyx-auth-action/main"
+          publish-url = "https://api.pyx.dev/v1/upload/pyx-auth-action/main"
+          EOF
+
+      - uses: ./
+        id: auth
+        with:
+          index: pyx-auth-action/main
+
+  selftest-exchange-only-upload-url:
     if: |-
       ${{
           github.event.pull_request.head.repo.full_name == 'astral-sh/pyx-auth-action' ||
@@ -237,7 +269,8 @@ jobs:
     if: always()
 
     needs:
-      - selftest-exchange-only
+      - selftest-exchange-only-index
+      - selftest-exchange-only-upload-url
       - selftest-exchange-only-workspace-default-registry
       - selftest-exchange-only-workspace
       - selftest-inputs-mutex-xfail
