--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,14 +36,14 @@ jobs:
           cat <<EOF >> pyproject.toml
 
           [[tool.uv.index]]
-          name = "pyx-auth-action/main"
+          name = "main"
           publish-url = "https://api.pyx.dev/v1/upload/pyx-auth-action/main"
           EOF
 
       - uses: ./
         id: auth
         with:
-          index: pyx-auth-action/main
+          index: main
 
   selftest-exchange-only-upload-url:
     if: |-
