--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,6 +37,7 @@ jobs:
 
           [[tool.uv.index]]
           name = "main"
+          url = "https://api.pyx.dev/simple/pyx-auth-action/main"
           publish-url = "https://api.pyx.dev/v1/upload/pyx-auth-action/main"
           EOF
 
