--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -250,8 +250,22 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: setup uv
-        uses: astral-sh/setup-uv@eb1897b8dc4b5d5bfe39a428a8f2304605e0983c # v7.0.0
+      - name: fetch temporary uv
+        uses: dawidd6/action-download-artifact@v11
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          workflow: ci.yml
+          pr: 16234
+          name: "uv-linux-libc-.+"
+          name_is_regexp: true
+
+      - name: Add uv to PATH
+        run: |
+          ls
+          echo "${CWD}" >> ${GITHUB_PATH}
+
+      # - name: setup uv
+      #   uses: astral-sh/setup-uv@eb1897b8dc4b5d5bfe39a428a8f2304605e0983c # v7.0.0
 
       - uses: ./
         id: auth
@@ -303,8 +317,22 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: setup uv
-        uses: astral-sh/setup-uv@eb1897b8dc4b5d5bfe39a428a8f2304605e0983c # v7.0.0
+      - name: fetch temporary uv
+        uses: dawidd6/action-download-artifact@v11
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          workflow: ci.yml
+          pr: 16234
+          name: "uv-linux-libc-.+"
+          name_is_regexp: true
+
+      - name: Add uv to PATH
+        run: |
+          ls
+          echo "${CWD}" >> ${GITHUB_PATH}
+
+      # - name: setup uv
+      #   uses: astral-sh/setup-uv@eb1897b8dc4b5d5bfe39a428a8f2304605e0983c # v7.0.0
 
       - uses: ./
         id: auth
@@ -360,8 +388,22 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: setup uv
-        uses: astral-sh/setup-uv@eb1897b8dc4b5d5bfe39a428a8f2304605e0983c # v7.0.0
+      - name: fetch temporary uv
+        uses: dawidd6/action-download-artifact@v11
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          workflow: ci.yml
+          pr: 16234
+          name: "uv-linux-libc-.+"
+          name_is_regexp: true
+
+      - name: Add uv to PATH
+        run: |
+          ls
+          echo "${CWD}" >> ${GITHUB_PATH}
+
+      # - name: setup uv
+      #   uses: astral-sh/setup-uv@eb1897b8dc4b5d5bfe39a428a8f2304605e0983c # v7.0.0
 
       - uses: ./
         id: auth
