--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -254,6 +254,7 @@ jobs:
         uses: dawidd6/action-download-artifact@v11
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          repo: astral-sh/uv
           workflow: ci.yml
           pr: 16234
           name: "uv-linux-libc-.+"
@@ -321,6 +322,7 @@ jobs:
         uses: dawidd6/action-download-artifact@v11
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          repo: astral-sh/uv
           workflow: ci.yml
           pr: 16234
           name: "uv-linux-libc-.+"
@@ -392,6 +394,7 @@ jobs:
         uses: dawidd6/action-download-artifact@v11
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          repo: astral-sh/uv
           workflow: ci.yml
           pr: 16234
           name: "uv-linux-libc-.+"
