--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -331,10 +331,11 @@ jobs:
           name: "uv-linux-libc-.+"
           name_is_regexp: true
 
-      - name: Add uv to PATH
+      - name: Find uv
+        id: find-uv
         run: |
           path=$(find "$(pwd)" -name 'uv-linux-libc*' | head -n 1)
-          echo "${path}" >> ${GITHUB_PATH}
+          echo "path=${path}" >> $GITHUB_OUTPUT
 
       # - name: setup uv
       #   uses: astral-sh/setup-uv@eb1897b8dc4b5d5bfe39a428a8f2304605e0983c # v7.0.0
@@ -363,12 +364,12 @@ jobs:
 
       - name: Build and publish package
         run: |
-          which uv
-          uv --version
-          uv build
-          uv publish
+          "${UV_PREFIX}"/uv --version
+          "${UV_PREFIX}"/uv build
+          "${UV_PREFIX}"/uv publish
         working-directory: sampleproject
         env:
+          UV_PREFIX: ${{ steps.find-uv.outputs.path }}
           UV_PUBLISH_URL: ${{ steps.auth.outputs.url }}
           UV_PUBLISH_TOKEN: ${{ steps.auth.outputs.token }}
 
@@ -405,10 +406,11 @@ jobs:
           name: "uv-linux-libc-.+"
           name_is_regexp: true
 
-      - name: Add uv to PATH
+      - name: Find uv
+        id: find-uv
         run: |
           path=$(find "$(pwd)" -name 'uv-linux-libc*' | head -n 1)
-          echo "${path}" >> ${GITHUB_PATH}
+          echo "path=${path}" >> $GITHUB_OUTPUT
 
       # - name: setup uv
       #   uses: astral-sh/setup-uv@eb1897b8dc4b5d5bfe39a428a8f2304605e0983c # v7.0.0
@@ -438,12 +440,12 @@ jobs:
 
       - name: Build and publish package
         run: |
-          which uv
-          uv --version
-          uv build
-          uv publish
+          "${UV_PREFIX}"/uv --version
+          "${UV_PREFIX}"/uv build
+          "${UV_PREFIX}"/uv publish
         working-directory: sampleproject
         env:
+          UV_PREFIX: ${{ steps.find-uv.outputs.path }}
           UV_PUBLISH_URL: ${{ steps.auth.outputs.url }}
           UV_PUBLISH_TOKEN: ${{ steps.auth.outputs.token }}
 
