--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -264,7 +264,7 @@ jobs:
         id: find-uv
         run: |
           path=$(find "$(pwd)" -name 'uv-linux-libc*' | head -n 1)
-          chmod +x "${path}/*"
+          chmod +x "${path}"/*
           echo "path=${path}" >> $GITHUB_OUTPUT
 
       # - name: setup uv
@@ -336,7 +336,7 @@ jobs:
         id: find-uv
         run: |
           path=$(find "$(pwd)" -name 'uv-linux-libc*' | head -n 1)
-          chmod +x "${path}/*"
+          chmod +x "${path}"/*
           echo "path=${path}" >> $GITHUB_OUTPUT
 
       # - name: setup uv
@@ -412,7 +412,7 @@ jobs:
         id: find-uv
         run: |
           path=$(find "$(pwd)" -name 'uv-linux-libc*' | head -n 1)
-          chmod +x "${path}/*"
+          chmod +x "${path}"/*
           echo "path=${path}" >> $GITHUB_OUTPUT
 
       # - name: setup uv
