--- a/action.yml
+++ b/action.yml
@@ -47,6 +47,8 @@ runs:
   steps:
     - name: setup uv
       uses: astral-sh/setup-uv@681c641aba71e4a1c380be3ab5e12ad51f415867 # v7.1.6
+      with:
+        cache-dependency-glob: ${{ github.action_path }}/uv.lock
 
     - name: exchange
       id: exchange
