--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,8 @@ classifiers = [
 ]
 
 [dependency-groups]
-dev = ["pyright>=1.1.407", "pytest>=9.0.1", "ruff>=0.14.6"]
+dev = [
+ "pytest>=9.0.1",
+ "ruff>=0.14.6",
+ "ty>=0.0.18",
+]
